--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>Chronology
+<h1>Rosary</h1>
+
+<div>
+
+Chronology
 The Sign of the Cross;
 1x Apostles' Creed ;
 1x Lord's Prayer
@@ -17,6 +20,6 @@ Will go through all Mysteries (cycle through 4 on 4 weeks) and do one decade
 1x Rosary Decade Prayer
 
 1x Hail Holy Queen
-The Sign of the cross.</p>
+The Sign of the cross.</div>
 </body>
 </html>
