--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 
 <!DOCTYPE html>
 <html>
+
+
 <body>
 <h1>Rosary</h1>
-
-<div>
+<pre>
 
 Chronology
 The Sign of the Cross;
@@ -20,6 +21,6 @@ Will go through all Mysteries (cycle through 4 on 4 weeks) and do one decade
 1x Rosary Decade Prayer
 
 1x Hail Holy Queen
-The Sign of the cross.</div>
+The Sign of the cross.</pre>
 </body>
 </html>
