--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
 <body>
-<h1>Rosary</h1>
+<h1>Rosary CWB</h1>
 <pre>
 
 Chronology
@@ -18,9 +18,91 @@ Will go through all Mysteries (cycle through 4 on 4 weeks) and do one decade
 1x Lord's Prayer
 2x Hail Mary
 1x Glory Be
-1x Rosary Decade Prayer
+1x Rosary Decade Prayer (The Fátima Prayer)
 
 1x Hail Holy Queen
 The Sign of the cross.</pre>
+
+<h3>Apostles' Creed</h3>
+<pre>I believe in God, the Father Almighty,
+Creator of Heaven and earth;
+and in Jesus Christ,
+His only Son Our Lord,
+Who was conceived by the Holy Spirit,
+born of the Virgin Mary,
+suffered under Pontius Pilate,
+was crucified, died, and was buried.
+He descended into Hell;
+the third day He rose again from the dead;
+He ascended into Heaven,
+ and sitteth at the right hand of God, the Father almighty;
+ from thence He shall come to judge the living and the dead.
+I believe in the Holy Spirit,
+the holy Catholic Church,
+the communion of saints,
+the forgiveness of sins,
+the resurrection of the body and life everlasting.
+Amen.</pre>
+
+<h3> Lord's Prayer </h3>
+<pre> Our Father,
+  Who art in heaven,
+  Hallowed be Thy Name.
+  Thy Kingdom come,
+  Thy Will be done,
+  On earth as it is in Heaven.
+  Give us this day, our daily bread,
+  And forgive us our trespasses,
+  as we forgive those who trespass against us.
+  And lead us not into temptation,
+  but deliver us from evil. Amen.</pre>
+
+
+<h3> Hail Mary </h3>
+<pre>Hail Mary,
+  Full of Grace,
+  The Lord is with thee.
+  Blessed art thou among women,
+  and blessed is the fruit of thy womb,
+  Jesus. Holy Mary, Mother of God,
+  pray for us sinners now,
+  and at the hour of death.
+  Amen. </pre>
+
+<h3> Glory be </h3>
+<pre> Glory be to the Father,
+  and to the Son,
+  and to the Holy Spirit.
+  As it was in the beginning,
+  is now,
+  and ever shall be,
+  world without end. Amen.</pre>
+
+
+<h3> Rosary Decade Prayer (The Fátima Prayer) </h3>
+<pre> O My Jesus, forgive us our sins,
+   save us from the fires of hell.
+   Lead all souls to Heaven,
+  especially those most in need of Thy mercy.</pre>
+
+
+<h3> Salve Regina/Hail Holy Queen </h3>
+<pre> Hail, holy Queen,
+   mother of mercy, our life,
+   our sweetness, and our hope.
+   To thee do we cry,
+    poor banished children of Eve.
+    To thee do we send up our sighs mourning and weeping in this valley of tears.
+     Turn then, most gracious advocate,
+     thine eyes of mercy toward us,
+     and after this our exile show us the blessed fruit of thy womb, Jesus.
+      O clement, O loving,
+   O sweet Virgin Mary. </pre>
+
+
+<h3>  </h3>
+<pre> </pre>
+
+
 </body>
 </html>
