--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ The Sign of the Cross;
 3x Hail Mary ( one for the faith, hope, and charity each)
 1x Glory Be
 
-Will go through all Mysteries (cycle through 4 on 4 weeks) and do one decade
+Will go through all Mysteries (cycle through 4(JOYFUL, SORROWFUL, GLORIOUS, LUMINOUS) on 4 weeks) and do one decade
 1x Lord's Prayer
 2x Hail Mary
 1x Glory Be
@@ -102,3 +102,44 @@ Amen.</pre>
 
 <h3> source : https://www.ewtn.com/catholicism/devotions/holy-rosary-390  </h3>
 <pre> </pre>
+
+<h3>THE JOYFUL MYSTERIES
+Mondays and Saturdays.
+Sundays of Advent & Christmas.</h3>
+<pre>
+1. The Annunciation
+2. The Visitation
+3. The Nativity
+4. The Presentation
+5. The Finding of Jesus in the Temple
+</pre>
+<h3>THE LUMINOUS MYSTERIES
+Thursdays</h3>
+<pre>
+1. The Baptism in the Jordan
+2. The Wedding at Cana
+3. Proclamation of the Kingdom
+4. The Transfiguration
+5. Institution of the Eucharist
+</pre>
+
+<h3>THE SORROWFUL MYSTERIES
+Tuesdays and Fridays.
+Sundays of Lent.</h3>
+<pre>
+  1. The Agony in the Garden
+  2. The Scourging at the Pillar
+  3. The Crowning with Thorns
+  4. The Carrying of the Cross
+  5. The Crucifixion
+</pre>
+
+<h3>THE GLORIOUS MYSTERIES
+Wednesdays and Sundays</h3>
+<pre>
+  1. The Resurrection
+  2. The Ascension
+  3. The Descent of the Holy Spirit
+  4. The Assumption of the Blessed Virgin Mary
+  5. The Coronation of the Blessed Virgin Mary
+</pre>
