--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ Will go through all Mysteries (cycle through 4(JOYFUL, SORROWFUL, GLORIOUS, LUMI
 1x Rosary Decade Prayer (The Fátima Prayer)
 
 1x Hail Holy Queen
+1x The Memorare
 The Sign of the cross.</pre>
 
 <h3>Apostles' Creed</h3>
@@ -98,7 +99,20 @@ Amen.</pre>
      and after this our exile show us the blessed fruit of thy womb, Jesus.
       O clement, O loving,
    O sweet Virgin Mary. </pre>
+ 
+<h3>The Memorare</h3>
+<pre>
+ Remember, O most gracious Virgin Mary, 
+ that never was it known that anyone who fled to thy protection, 
+ implored thy help, or sought thine intercession was left unaided.
 
+Inspired by this confidence, 
+I fly unto thee, O Virgin of virgins, my mother; 
+to thee do I come, before thee I stand, 
+sinful and sorrowful. 
+O Mother of the Word Incarnate, despise not my petitions, 
+but in thy mercy hear and answer me.
+</pre>
 
 <h3> source : https://www.ewtn.com/catholicism/devotions/holy-rosary-390  </h3>
 <pre> </pre>
@@ -113,6 +127,7 @@ Sundays of Advent & Christmas.</h3>
 4. The Presentation
 5. The Finding of Jesus in the Temple
 </pre>
+ 
 <h3>THE LUMINOUS MYSTERIES
 Thursdays</h3>
 <pre>
