--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@ Will go through all Mysteries (cycle through 4(JOYFUL, SORROWFUL, GLORIOUS, LUMI
 
 1x Hail Holy Queen
 1x The Memorare
+
+1x Lord's Prayer
+3x Hail Mary ( for the pope)
+1x Glory Be
+
+1x The Rosary Prayer
 The Sign of the cross.</pre>
 
 <h3>Apostles' Creed</h3>
@@ -113,8 +119,20 @@ sinful and sorrowful.
 O Mother of the Word Incarnate, despise not my petitions, 
 but in thy mercy hear and answer me.
 </pre>
+ 
+ <h3> The Rosary Prayer</h3>
+<pre>
+O God, whose only begotten Son, 
+ by His life, death and resurrection, 
+ has purchased for us the rewards of eternal salvation, 
+ grant, we beseech thee, 
+ that while meditating on these mysteries
+ of the most holy rosary of the Blessed Virgin Mary, 
+ that we may both imitate what they contain
+ and obtain what they promise through Christ our Lord, Amen. 
+ </pre>
 
-<h3> source : https://www.ewtn.com/catholicism/devotions/holy-rosary-390  </h3>
+
 <pre> </pre>
 
 <h3>THE JOYFUL MYSTERIES
@@ -158,3 +176,6 @@ Wednesdays and Sundays</h3>
   4. The Assumption of the Blessed Virgin Mary
   5. The Coronation of the Blessed Virgin Mary
 </pre>
+
+ 
+<h3> source : https://www.ewtn.com/catholicism/devotions/holy-rosary-390  </h3>
